compiler/tests/en/errors/struct_method_private.salam
// EXPECT: E017
struct Counter:
    value : int = 0
    func bump(): this.value = this.value + 1 end
    pub func get() : int: ret value end
end

func main:
    mut c := Counter { value = 5 }
    c.bump()
    __ c.get()
end
